--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -14,13 +14,13 @@ const projects = (await getCollection('work')).sort(
 ---
 
 <BaseLayout
-	title="My Work | Natalia Kuchta"
+	title="My Blog | Natalia Kuchta"
 	description="Learn about Natalia Kuchta most recent projects"
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
-				title="My Project"
+				title="My Blog"
 				tagline="See my most recent projects below to get an idea of my past experience."
 				align="start"
 			/>
