Added new articles my work page and photos, videos and skills.

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -17,7 +17,7 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="heart-straight" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Professional communication</h2>
-		<p>Professional communication is about conveying your message clearly and respectfully, ensuring that everyone involved understands the goals and expectations while fostering a positive and collaborative environment.</p>
+		<p>Sometimes you need more tact than when choosing a GIF for the group chat.</p>
 	</div>
 </section>
 
