added text in about page, change work page for blog page, added gifs, photos and more text in my blog

--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -4,8 +4,8 @@ import Icon from './Icon.astro';
 ---
 
 <aside>
-	<h2>Interested in working together?</h2>
-	<CallToAction href="n.kuchta@onet.pl">
+	<h2>Need a website? Ping me! 💻</h2>
+	<CallToAction href="mailto:natusia.taka@gmail.com">
 		Send Me a Message
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
