--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,6 +15,7 @@ const currentYear = new Date().getFullYear();
 		<a href="https://twitter.com/me"> Twitter</a>
 		<a href="https://github.com/natalia-kuchta"> GitHub</a>
 		<a href="https://codepen.io/me"> CodePen</a>
+		<a href="https://www.linkedin.com/in/natalia-kuchta-4527832b4/">Linkedin</a>
 	</p>
 </footer>
 <style>
