--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,18 +6,17 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Full Stack</h2>
-		<p>Learning both front-end and back-end development as a full stack developer means you get to master the art of creating stunning user interfaces and also
-			become the wizard behind the scenes, making sure everything runs smoothly and efficiently.</p>
+		<p>Coding sorceress who gracefully moves from front-end to back-end, fixes bugs like spells, and always has an ace up her sleeve when things go awry.” 🧙‍♀️💻</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="users" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Passion for IT recruitment</h2>
-		<p>Having a passion for IT recruitment allows you to effectively match the right tech talent with the right roles, driving success for both candidates and companies.</p>
+		<h2>IT recruitment craze</h2>
+		<p>Like searching for a unicorn in a dark forest—except the unicorn is a developer and the forest is the internet full of CVs!🦄💻</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="heart-straight" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Professional communication</h2>
-		<p>Sometimes you need more tact than when choosing a GIF for the group chat.</p>
+		<h2>People skills expert</h2>
+		<p>Sometimes you need more tact than when choosing a GIF for the group chat. 🕵️‍♀️💡🎯”</p>
 	</div>
 </section>
 
