--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,10 +12,10 @@ const currentYear = new Date().getFullYear();
 		<p>&copy; {currentYear} Natalia Kuchta</p>
 	</div>
 	<p class="socials">
-		<a href="https://twitter.com/me"> Twitter</a>
+		<a href="https://x.com/NatusiaNa">Twitter</a>
 		<a href="https://github.com/natalia-kuchta"> GitHub</a>
-		<a href="https://codepen.io/me"> CodePen</a>
-		<a href="https://www.linkedin.com/in/natalia-kuchta-4527832b4/">Linkedin</a>
+		<a href="https://codepen.io/na-ku"> CodePen</a>
+		<a href="https://www.linkedin.com/in/natalia-kuchta-4527832b4">Linkedin</a>
 	</p>
 </footer>
 <style>
