added new skills

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const articles = (await getCollection('blog'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Natalia Kuchta"
+					title="Hello, my name is Natalia"
 					tagline="Your friendly code sorceress, ready to debug the matrix and sprinkle a little magic on your tech troubles!” 💻🧙‍♀️✨"
 					align="start"
 				>
@@ -90,7 +90,7 @@ const articles = (await getCollection('blog'))
 				<div class="gallery">
 					<Grid variant="small">
 						{
-							['JavaScript', 'TypeScript', 'Vue', 'Tailwind', 'Git','Docker'].map((brand) => (
+							['JavaScript', 'TypeScript', 'Vue', 'Tailwind', 'Git','Docker','Node.js'].map((brand) => (
 								<li class="mention-card">
 									<p>{brand}</p>
 								</li>
