--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection } from 'astro:content';
+import {getCollection} from 'astro:content';
 
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
 import BaseLayout from '../layouts/BaseLayout.astro';
@@ -18,234 +18,253 @@ import Skills from '../components/Skills.astro';
 
 // Content Fetching: List four most recent blog posts
 const articles = (await getCollection('blog'))
-	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-	.slice(0, 4);
+    .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
+    .slice(0, 4);
 
 // Full Astro Component Syntax:
 // https://docs.astro.build/basics/astro-components/
 ---
 
 <BaseLayout>
-	<div class="stack gap-20 lg:gap-48">
-		<div class="wrapper stack gap-8 lg:gap-20">
-			<header class="hero">
-				<Hero
-					title="Hello, my name is Natalia"
-					tagline="Your friendly code sorceress, ready to debug the matrix and sprinkle a little magic on your tech troubles!” 💻🧙‍♀️✨"
-					align="start"
-				>
-					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="phone-call" size="1.33em" /> Recruiter</Pill>
-						<Pill><Icon icon="airplane-tilt" size="1.33em" /> Traveler</Pill>
-					</div>
-				</Hero>
+    <div class="stack gap-20 lg:gap-48">
+        <div class="wrapper stack gap-8 lg:gap-20">
+            <header class="hero">
+                <Hero
+                        title="Hello, my name is Natalia"
+                        tagline="Your friendly code sorceress, ready to debug the matrix and sprinkle a little magic on your tech troubles!” 💻🧙‍♀️✨"
+                        align="start"
+                >
+                    <div class="roles">
+                        <Pill>
+                            <Icon icon="code" size="1.33em"/>
+                            Developer
+                        </Pill>
+                        <Pill>
+                            <Icon icon="phone-call" size="1.33em"/>
+                            Recruiter
+                        </Pill>
+                        <Pill>
+                            <Icon icon="airplane-tilt" size="1.33em"/>
+                            Traveler
+                        </Pill>
+                    </div>
+                </Hero>
 
-				<img
-					alt="Natalia is smiling"
-					width="480"
-					height="620"
-					src="/assets/portrait.jpg"
-				/>
-			</header>
+                <img
+                        alt="Natalia is smiling"
+                        width="480"
+                        height="620"
+                        src="/assets/portrait.jpg"
+                />
+            </header>
 
-			<Skills />
-		</div>
+            <Skills/>
+        </div>
 
-		<main class="wrapper stack gap-20 lg:gap-48">
-			<section class="section with-background with-cta">
-				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Selected my Articles</h3>
-					<p></p>
-				</header>
+        <main class="wrapper stack gap-20 lg:gap-48">
+            <section class="section with-background with-cta">
+                <header class="section-header stack gap-2 lg:gap-4">
+                    <h3>Selected my Articles</h3>
+                    <p></p>
+                </header>
 
-				<div class="gallery">
-					<Grid variant="offset">
-						{
-							articles.map((article) => (
-								<li>
-									<PortfolioPreview project={article} />
-								</li>
-							))
-						}
-					</Grid>
-				</div>
+                <div class="gallery">
+                    <Grid variant="offset">
+                        {
+                            articles.map((article) => (
+                                    <li>
+                                        <PortfolioPreview project={article}/>
+                                    </li>
+                            ))
+                        }
+                    </Grid>
+                </div>
 
-				<div class="cta">
-					<CallToAction href="/blog/">
-						View All
-						<Icon icon="arrow-right" size="1.2em" />
-					</CallToAction>
-				</div>
-			</section>
+                <div class="cta">
+                    <CallToAction href="/blog/">
+                        View All
+                        <Icon icon="arrow-right" size="1.2em"/>
+                    </CallToAction>
+                </div>
+            </section>
 
-			<section class="section with-background bg-variant">
-				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Skills</h3>
-					<p>
+            <section class="section with-background bg-variant">
+                <header class="section-header stack gap-2 lg:gap-4">
+                    <h3>Skills</h3>
+                    <p>
 
-					</p>
-				</header>
+                    </p>
+                </header>
 
-				<div class="gallery">
-					<Grid variant="small">
-						{
-							['JavaScript', 'TypeScript', 'Vue', 'Tailwind', 'Git','Docker','Node.js'].map((brand) => (
-								<li class="mention-card">
-									<p>{brand}</p>
-								</li>
-							))
-						}
-					</Grid>
-				</div>
-			</section>
-		</main>
+                <div class="gallery">
+                    <Grid variant="small">
+                        {
+                            [
+                                'JavaScript',
+                                'TypeScript',
+                                'Vue',
+                                'Tailwind',
+                                'Git',
+                                'Docker',
+                                'Node.js',
+                                'Three.js',
+                                'Pinia',
+                                'Astro'
+                            ].map((brand) => (
+                                    <li class="mention-card">
+                                        <p>{brand}</p>
+                                    </li>
+                            ))
+                        }
+                    </Grid>
+                </div>
+            </section>
+        </main>
 
-		<ContactCTA />
-	</div>
+        <ContactCTA/>
+    </div>
 </BaseLayout>
 
 <style>
-	.hero {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		gap: 2rem;
-	}
+    .hero {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+    }
 
-	.roles {
-		display: none;
-	}
+    .roles {
+        display: none;
+    }
 
-	.hero img {
-		aspect-ratio: 5 / 4;
-		object-fit: cover;
-		object-position: top;
-		border-radius: 1.5rem;
-		box-shadow: var(--shadow-md);
-	}
+    .hero img {
+        aspect-ratio: 5 / 4;
+        object-fit: cover;
+        object-position: top;
+        border-radius: 1.5rem;
+        box-shadow: var(--shadow-md);
+    }
 
-	@media (min-width: 50em) {
-		.hero {
-			display: grid;
-			grid-template-columns: 6fr 4fr;
-			padding-inline: 2.5rem;
-			gap: 3.75rem;
-		}
+    @media (min-width: 50em) {
+        .hero {
+            display: grid;
+            grid-template-columns: 6fr 4fr;
+            padding-inline: 2.5rem;
+            gap: 3.75rem;
+        }
 
-		.roles {
-			margin-top: 0.5rem;
-			display: flex;
-			gap: 0.5rem;
-		}
+        .roles {
+            margin-top: 0.5rem;
+            display: flex;
+            gap: 0.5rem;
+        }
 
-		.hero img {
-			aspect-ratio: 3 / 4;
-			border-radius: 4.5rem;
-			object-fit: cover;
-		}
-	}
+        .hero img {
+            aspect-ratio: 3 / 4;
+            border-radius: 4.5rem;
+            object-fit: cover;
+        }
+    }
 
-	/* ====================================================== */
+    /* ====================================================== */
 
-	.section {
-		display: grid;
-		gap: 2rem;
-	}
+    .section {
+        display: grid;
+        gap: 2rem;
+    }
 
-	.with-background {
-		position: relative;
-	}
+    .with-background {
+        position: relative;
+    }
 
-	.with-background::before {
-		--hero-bg: var(--bg-image-subtle-2);
+    .with-background::before {
+        --hero-bg: var(--bg-image-subtle-2);
 
-		content: '';
-		position: absolute;
-		pointer-events: none;
-		left: 50%;
-		width: 100vw;
-		aspect-ratio: calc(2.25 / var(--bg-scale));
-		top: 0;
-		transform: translateY(-75%) translateX(-50%);
-		background:
-			url('/assets/backgrounds/noise.png') top center/220px repeat,
-			var(--hero-bg) center center / var(--bg-gradient-size) no-repeat,
-			var(--gray-999);
-		background-blend-mode: overlay, normal, normal, normal;
-		mix-blend-mode: var(--bg-blend-mode);
-		z-index: -1;
-	}
+        content: '';
+        position: absolute;
+        pointer-events: none;
+        left: 50%;
+        width: 100vw;
+        aspect-ratio: calc(2.25 / var(--bg-scale));
+        top: 0;
+        transform: translateY(-75%) translateX(-50%);
+        background: url('/assets/backgrounds/noise.png') top center/220px repeat,
+        var(--hero-bg) center center / var(--bg-gradient-size) no-repeat,
+        var(--gray-999);
+        background-blend-mode: overlay, normal, normal, normal;
+        mix-blend-mode: var(--bg-blend-mode);
+        z-index: -1;
+    }
 
-	.with-background.bg-variant::before {
-		--hero-bg: var(--bg-image-subtle-1);
-	}
+    .with-background.bg-variant::before {
+        --hero-bg: var(--bg-image-subtle-1);
+    }
 
-	.section-header {
-		justify-self: center;
-		text-align: center;
-		max-width: 50ch;
-		font-size: var(--text-md);
-		color: var(--gray-300);
-	}
+    .section-header {
+        justify-self: center;
+        text-align: center;
+        max-width: 50ch;
+        font-size: var(--text-md);
+        color: var(--gray-300);
+    }
 
-	.section-header h3 {
-		font-size: var(--text-2xl);
-	}
+    .section-header h3 {
+        font-size: var(--text-2xl);
+    }
 
-	@media (min-width: 50em) {
-		.section {
-			grid-template-columns: repeat(4, 1fr);
-			grid-template-areas: 'header header header header' 'gallery gallery gallery gallery';
-			gap: 5rem;
-		}
+    @media (min-width: 50em) {
+        .section {
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-areas: 'header header header header' 'gallery gallery gallery gallery';
+            gap: 5rem;
+        }
 
-		.section.with-cta {
-			grid-template-areas: 'header header header cta' 'gallery gallery gallery gallery';
-		}
+        .section.with-cta {
+            grid-template-areas: 'header header header cta' 'gallery gallery gallery gallery';
+        }
 
-		.section-header {
-			grid-area: header;
-			font-size: var(--text-lg);
-		}
+        .section-header {
+            grid-area: header;
+            font-size: var(--text-lg);
+        }
 
-		.section-header h3 {
-			font-size: var(--text-4xl);
-		}
+        .section-header h3 {
+            font-size: var(--text-4xl);
+        }
 
-		.with-cta .section-header {
-			justify-self: flex-start;
-			text-align: left;
-		}
+        .with-cta .section-header {
+            justify-self: flex-start;
+            text-align: left;
+        }
 
-		.gallery {
-			grid-area: gallery;
-		}
+        .gallery {
+            grid-area: gallery;
+        }
 
-		.cta {
-			grid-area: cta;
-		}
-	}
+        .cta {
+            grid-area: cta;
+        }
+    }
 
-	/* ====================================================== */
+    /* ====================================================== */
 
-	.mention-card {
-		display: flex;
-		height: 7rem;
-		justify-content: center;
-		align-items: center;
-		text-align: center;
-		border: 1px solid var(--gray-800);
-		border-radius: 1.5rem;
-		color: var(--gray-300);
-		background: var(--gradient-subtle);
-		box-shadow: var(--shadow-sm);
-	}
+    .mention-card {
+        display: flex;
+        height: 7rem;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        border: 1px solid var(--gray-800);
+        border-radius: 1.5rem;
+        color: var(--gray-300);
+        background: var(--gradient-subtle);
+        box-shadow: var(--shadow-sm);
+    }
 
-	@media (min-width: 50em) {
-		.mention-card {
-			border-radius: 1.5rem;
-			height: 9.5rem;
-		}
-	}
+    @media (min-width: 50em) {
+        .mention-card {
+            border-radius: 1.5rem;
+            height: 9.5rem;
+        }
+    }
 </style>
