add link my portfoilio and new skill React

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,6 +16,7 @@ const currentYear = new Date().getFullYear();
 		<a href="https://github.com/natalia-kuchta"> GitHub</a>
 		<a href="https://codepen.io/na-ku"> CodePen</a>
 		<a href="https://www.linkedin.com/in/natalia-kuchta-4527832b4">Linkedin</a>
+		<a href="https://portfolio-natalia.netlify.app/">My Portfolio</a>
 	</p>
 </footer>
 <style>
