--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,7 +109,9 @@ const articles = (await getCollection('blog'))
                                 'Node.js',
                                 'Three.js',
                                 'Pinia',
-                                'Astro'
+                                'Astro',
+                                'React'
+
                             ].map((brand) => (
                                     <li class="mention-card">
                                         <p>{brand}</p>
